working on deny rule separating route/factory/db files
